modificari mobile pozitie butoane

--- a/index.html
+++ b/index.html
@@ -61,6 +61,40 @@
         </div>
     </nav>
 
+    <!-- Mobile Bookmark Container (visible only on mobile) -->
+    <div class="mobile-bookmarks-container" id="mobileBookmarksContainer">
+        <div class="awards-bookmark-mobile">
+            <button class="bookmark-tab-mobile" id="bookmarkTabMobile" aria-label="Deschide trofee">
+                <span class="bookmark-text-mobile" data-i18n="awards.bookmarkText">Trofee</span>
+            </button>
+            <div class="mobile-panel" id="mobileAwardsPanel">
+                <div class="mobile-panel-inner" id="mobileAwardsPanelInner">
+                    <!-- Content will be copied from desktop panel via JS -->
+                </div>
+            </div>
+        </div>
+        <div class="press-bookmark-mobile">
+            <button class="bookmark-tab-mobile" id="pressTabMobile" aria-label="Deschide apariții în presă">
+                <span class="bookmark-text-mobile" data-i18n="press.bookmarkText">Presă</span>
+            </button>
+            <div class="mobile-panel" id="mobilePressPanel">
+                <div class="mobile-panel-inner" id="mobilePressPanelInner">
+                    <!-- Content will be copied from desktop panel via JS -->
+                </div>
+            </div>
+        </div>
+        <div class="certificates-bookmark-mobile">
+            <button class="bookmark-tab-mobile" id="certificatesTabMobile" aria-label="Deschide certificări">
+                <span class="bookmark-text-mobile" data-i18n="certificates.bookmarkText">Certificări</span>
+            </button>
+            <div class="mobile-panel" id="mobileCertificatesPanel">
+                <div class="mobile-panel-inner" id="mobileCertificatesPanelInner">
+                    <!-- Content will be copied from desktop panel via JS -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Awards Bookmark -->
     <div class="awards-bookmark" id="awardsBookmark">
         <button class="bookmark-tab" id="bookmarkTab" aria-label="Deschide trofee">
