--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="award-info">
                             <h3>VVGOLD SAFFRON BIO</h3>
                             <span class="award-year">2024</span>
-                            <p>Produs rar întâlnit pe piața globală, certificat 5★ Bio Product de KIWA - Germany, recunoscut internațional în 2024. Recoltat manual și uscat natural, întruchipează rigoarea, raritatea și rafinamentul absolut, fiind primul șofran certificat BIO la nivel internațional.</p>
+                            <p>Șofran premium certificat BIO la standarde Europene stricte. Recolta este verificată și certificată de Kiwa BCS Öko-Garantie GmbH, una dintre cele mai puternice companii de certificare ecologică din Europa cu activitate din 1992  Recoltat manual și uscat natural, VVGOLD SAFFRON BIO a primit premiul BIO oficial internațional, fiind un produs rar în categoria șofranului de lux.</p>
                         </div>
                     </div>
                     
